# Compiler

./: .gitignore  CMakeLists.txt  README.md
src/: Description.md  Targets.md  main.cpp
src/Base/: StartFile.hpp
src/Base/Classes/: CompareIterators.hpp
src/Base/Generators/: Label.hpp  Replace.hpp
src/Base/Requirements/: Iterable.hpp  Iterator.hpp
src/Base/Traits/: Iterable.hpp  Iterator.hpp
src/Grammar/: Description.md  Targets.md
src/Grammar/Algorithms/: DetermineNFA.hpp  FA2NFA.hpp  FunctionsNFA.hpp  HelperFA.hpp  MinimizeDFA.hpp  NFA2DFA.hpp  PosixPlusRPN.hpp  PosixRPN.hpp  RemoveEpsNFA.hpp  RemoveUselessNFA.hpp
src/Grammar/Classes/FA/: FA.hpp  FastDFA.hpp
src/Grammar/Classes/RPN/: CreatorNFA.hpp  RPN.hpp  Table.hpp
src/Grammar/Classes/Requirements/: FA.hpp  RPN.hpp
src/Grammar/Classes/Traits/: FA.hpp  RPN.hpp
src/Grammar/Debug/: PrintFA.hpp
src/Grammar/Description/: CFG.md  FA.md  RE.md  RPN.md
src/Grammar/Filework/: SimpleReadFA.hpp
